# bot

./: .env.example  .gitignore  .prototools  Dockerfile  README.md  docker-compose.yaml  main.py  makefile  pyproject.toml  requirements.txt  run.py  run_bot.py  run_web.py
app/: __init__.py
app/bot/: __init__.py
app/bot/cogs/: __init__.py  link.py  role.py  tts.py
app/core/: environment.py  tts_manager.py
app/database/: config.py
app/database/models/: voice_settings.py
app/web/: server.py
app/web/templates/: index.html
config/: .gitkeep
data/database/: .gitkeep
migrations/: env.py
migrations/versions/: 19376bf45e5d_init.py  329a43a2dde7_init.py  a3a1d3c932f8_init.py
prisma/: schema.prisma
src/: boot.py  database.py  dependency.py  environment.py  web_server.py
src/cogs/: auth.py  link.py  role.py  tts.py
src/infrastructures/: database.py  db.py
src/repository/: guild.py  user.py
