[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["yupix <yupi0982@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"


[tool.poetry.group.web.dependencies]
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
jinja2 = "^3.1.2"


[tool.poetry.group.bot.dependencies]
discord-py = "^2.3.2"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
captcha = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
